<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BrewCalc</string>
    <string name="title_ingredient_detail">Ingredient Detail</string>
    <string name="hops">Hops</string>
    <string name="sugars">Sugars</string>
    <string name="yeast">Yeast</string>
    <string name="water">Water</string>
    <string name="title_ingredients">Ingredients</string>
    <string name="title_calcs">Calculators</string>
    <string name="title_recipies">Recipies</string>
    <string name="hop_name">Name</string>
    <string name="alpha_name">Alpha</string>
    <string name="beta_name">Beta</string>
    <string name="bittering">Bittering</string>
    <string name="aroma">Aroma</string>
    <string name="dual">Dual purpose</string>
    <string name="whole">Whole</string>
    <string name="plug">Plug</string>
    <string name="pellet">Pellet</string>
    <string name="origin">Origin</string>
    <string name="storage_factor">HSI</string>
    <string name="storage_factor_large">Storage Factor (percentage loss in 6 month at 20C)</string>
    <string name="humulene">Humulene</string>
    <string name="cohumulone">Cohumulone</string>
    <string name="myrcene">Myrcene</string>
    <string name="caryophyllene">Caryophyllene</string>
    <string name="notes">Notes</string>
    <string name="save">Save</string>
    <string name="add_menu">add</string>
    <string name="hop_already_exists">Hop %1$s already exists</string>
    <string name="error_dialog_title">Error</string>
    <string name="add_hop">Add Hop</string>
    <string name="add_yeast">Add Yeast</string>
    <string name="add_sugar">Add Sugar</string>
    <string name="add_water">Add Water</string>
    <string name="extract_potential">Extract Potential</string>
    <string-array name="pref_extract_potential">
        <item >SG</item>
        <item >Points</item>
        <item >Plato</item>
        <item >IOB / HWE</item>
        <item >Percent Yield Fine Grind Dry Basis</item>
    </string-array>
    <string-array name="pref_extract_potential_values">
        <item >0</item>
        <item >1</item>
        <item >2</item>
        <item >3</item>
        <item >4</item>
    </string-array>
    <string name="settings_menu">Settings</string>
    <string name="sugar">Sugar</string>
    <string name="grain">Grain</string>
    <string name="adjunct">Adjunct</string>
    <string name="extract">Extract</string>
    <string name="sugarName">Name</string>
    <string name="supplier">Supplier</string>
    <string name="mustMash">Must Mash</string>
    <string name="gravityPotentialName">Gravity Potential</string>
    <string name="colourName">Colour (SRM)</string>
    <string name="colourNameEbc">Colour (EBC - Old)</string>
    <string name="colourNameEbcNew">Colour (EBC - New)</string>
    <string name="moistureName">Moisture (%)</string>
    <string name="coarseFineDiffName">Coarse/Fine Diff</string>
    <string name="fineDryName">Yield Fine Dry</string>
    <string name="fineAsIsName">Yield Fine As Is</string>
    <string name="coarseDryName">Yield Coarse Dry</string>
    <string name="coarseAsIsName">Yield Coase As Is</string>
    <string name="maxInBatchName">Max In Batch (%)</string>
    <string name="diastaticName">Diastatic Power (%)</string>
    <string name="proteinName">Protein (%)</string>
    <string name="nitrogenName">Nitrogen (%)</string>
    <string name="hopsIbuName">Hops IBU</string>
    <string name="pHName">pH</string>
    <string name="yeastName">Name</string>
    <string name="catalogId">Product ID</string>
    <string name="laboratory">Laboratory</string>
    <string name="ale">Ale</string>
    <string name="lager">Lager</string>
    <string name="wine">Wine</string>
    <string name="champagne">Champagne</string>
    <string name="dry">Dry</string>
    <string name="liquid">Liquid</string>
    <string name="agar">Agar Slant</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="veryHigh">Very High</string>
    <string name="useStarter">Use Starter</string>
    <string name="addToSecondary">Add to Secondary</string>
    <string name="maxReuse">Max Reuse</string>
    <string name="minAttenuationName">Min Attenuation</string>
    <string name="maxAttenuationName">Max Attenuation</string>
    <string name="minTemperatureName">Min Temperature</string>
    <string name="maxTemperatureName">Max Temperature</string>
    <string name="flavour">Flavour</string>
    <string name="yeastTypeName">Type</string>
    <string name="yeastFormName">Form</string>
    <string name="flocculationName">Flocculation</string>
    <string-array name="maxReuseArray">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    
    <!-- WATER FORM -->
    <string name="waterName">Name</string>
    <string name="bestBeer">Known for beer</string>
    <string name="calciumName">Calcium (Ca)</string>
    <string name="magnesiumName">Magnesium (Mg)</string>
    <string name="sulfateName">Sulfates (SO4)</string>
    <string name="sodiumName">Sodium (Na)</string>
    <string name="bicarbonadeName">Bicarbonade (HCO3)</string>
    <string name="chlorideName">Chloride (Cl)</string>
    <string name="phName">pH</string>
    
    <string name="ogName">OG</string>
    <string name="fgName">FG</string>
    <string name="platoName">Plato</string>
    <string name="abvName">Alcohol by Volume (ABV)</string>
    <string name="abwName">Alcohol by Weight (ABW)</string>
    <string name="rdfName">Attenuation (RDF)</string>
    <string name="adfName">Attenuation (ADF)</string>
    <string name="redidualSGName">Residual Extract (SG)</string>
    <string name="residualPlatoName">Residual Extract (Plato)</string>
    
    <string name="startWaterName">Before boil wort volume, </string>
    <string name="startSGName">SG before boil</string>
    <string name="startPlatoName">Plato before boil</string>
    <string name="boilLenghtName">Boil lengh, min</string>
    <string name="amountEvapouratedName">Volume evapourated, </string>
    <string name="evapourationRatePercentName">Evapouration rate per hour, %</string>
    <string name="evapourationRateAmountName">Evapouration rate per hour, </string>
    <string name="volumeAfterBoilName">Volume after, </string>
    <string name="finalSGName">SG after boil</string>
    <string name="finalPlatoName">Plato after boil</string>
    
    
    <string name="preference_measurements">Units</string>
    <string name="preference_brewhouse_efficiency">Efficiency</string>
    <string name="preference_calibration">Calibration</string>
    <string name="preference_hops">Hops</string>
    <string name="preference_colours">Colours</string>
    <string name="preference_measurements_summary">Measures, Sizes, Presicions</string>
    <string name="preference_brewhouse_efficiency_summary">Brewhouse Efficiency</string>
    <string name="preference_calibration_summary">Instrument Calibration</string>
    <string name="preference_hops_summary">Hop Utilisation, Calculations and Storage</string>
    <string name="preference_colours_summary">Malt and Beer Colours</string>
    
    <string name="pref_default_efficiency">Default Efficiency, %</string>
    <string name="pref_fluid_units">Fluid Units</string>
    <string name="pref_grain_units">Grain Units</string>
    <string name="pref_hops_units">Hops Units</string>
    <string name="pref_pressure_units">Pressure (CO2) Units</string>
    <string name="pref_temperature_units">Temperature Units</string>
    <string name="pref_american">American</string>
    <string name="pref_farenheit">Fahrenheit</string>
    <string name="pref_metric">Metric</string>
    <string name="pref_celsius">Celsius</string>
    <string name="pref_metric_switch">Met</string>
    <string name="pref_american_switch">Am</string>
    <string name="pref_farenheit_switch">F</string>
    <string name="pref_celsius_switch">C</string>
    <string name="pref_units">Units</string>
    <string name="pref_brewhouse_type">Brew System Settings</string>
    <string name="pref_homepro_type">Brewhouse Type</string>
    <string name="pref_home_switch">Home</string>
    <string name="pref_home">Home Brewer</string>
    <string name="pref_pro_switch">Pro</string>
    <string name="pref_pro">Professional Brewer</string>
    <string name="pref_batch_size_gal">Default Batch Size, Gal</string>
    <string name="pref_batch_size_bbl">Default Batch Size, Bbl</string>
    <string name="pref_batch_size_L">Default Batch Size, L</string>
    <string name="pref_batch_size_hl">Default Batch Size, hl</string>

    <string name="Barrels">Bbl</string>
    <string name="Liters">L</string>
    <string name="Gallons">Gal</string>
    <string name="Hectoliters">hl</string>
    
    <string name="settings">Settings</string>
    
    <string name="calcAlcohol">Alcohol %</string>
    <string name="calcBoiloff">Boil Off</string>
    <string name="calcCarbonation">Carbonation</string>
    
</resources>