<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/malt_details_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >

    <EditText
        android:id="@+id/yeastName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/yeastName" />
    <EditText
        android:id="@+id/catalogId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/catalogId" />

    <EditText
        android:id="@+id/laboratory"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/laboratory" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    <TextView
        android:id="@+id/yeastTypeName"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:text="@string/yeastTypeName"
        android:textAppearance="?android:attr/textAppearanceMedium"  />    
    <RadioGroup
        android:id="@+id/yeastTypeGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/ale"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/ale" />

        <RadioButton
            android:id="@+id/lager"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:text="@string/lager" />

        <RadioButton
            android:id="@+id/wine"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:text="@string/wine" />
        
        <RadioButton
            android:id="@+id/champagne"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:text="@string/champagne" />
        
    </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    <TextView
        android:id="@+id/yeastFormName"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:text="@string/yeastFormName" 
        android:textAppearance="?android:attr/textAppearanceMedium" />   
    <RadioGroup
        android:id="@+id/yeastFormGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/liquid"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/liquid" />

        <RadioButton
            android:id="@+id/dry"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:text="@string/dry" />

        <RadioButton
            android:id="@+id/agar"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:text="@string/agar" />
        
    </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    <TextView
        android:id="@+id/flocculationName"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:text="@string/flocculationName" 
        android:textAppearance="?android:attr/textAppearanceMedium" />   
    
    <RadioGroup
        android:id="@+id/yeastFlocculationGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/low"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/low" />

        <RadioButton
            android:id="@+id/medium"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:text="@string/medium" />

        <RadioButton
            android:id="@+id/high"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:text="@string/high" />
        
        <RadioButton
            android:id="@+id/veryHigh"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:text="@string/veryHigh" />
        
    </RadioGroup>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    
    <CheckBox
            android:id="@+id/useStarter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/useStarter" />
    
      <CheckBox
            android:id="@+id/addToSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addToSecondary" />

    <TextView
        android:id="@+id/maxReuseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/maxReuse"
        android:textAppearance="?android:attr/textAppearanceMedium" />
     
    <Spinner android:id="@+id/maxReuse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maxReuse"
            android:entries="@array/maxReuseArray"
            android:spinnerMode="dropdown"/>
    </LinearLayout>
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/minAttenuationName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minAttenuationName"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        
        <EditText
            android:id="@+id/minAttenuationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/minAttenuationName"
            android:inputType="numberDecimal" >
        </EditText>

        <TextView
            android:id="@+id/maxAttenuationName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maxAttenuationName"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/maxAttenuationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/maxAttenuationName"
            android:inputType="numberDecimal" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/minTemperatureName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minTemperatureName"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        
        <EditText
            android:id="@+id/minTemperatureText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/minTemperatureName"
            android:inputType="numberDecimal" >
        </EditText>

        <TextView
            android:id="@+id/maxTemperatureName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maxTemperatureName"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/maxTemperatureText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/maxTemperatureName"
            android:inputType="numberDecimal" />
    </LinearLayout>
    

    <EditText
        android:id="@+id/flavour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="@string/flavour" 
        >
    </EditText>
    
    <EditText
        android:id="@+id/notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="@string/notes" 
        >
    </EditText>

</LinearLayout>