<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/hop_details_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >

    <EditText
        android:id="@+id/hop_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hop_name" />
    <EditText
        android:id="@+id/origin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/origin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/alpha_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alpha_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/alpha_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/alpha_name"
            android:inputType="numberDecimal" >
        </EditText>

        <TextView
            android:id="@+id/beta_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beta_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/beta_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/beta_name"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/hopTypeGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/bittering"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/bittering" />

        <RadioButton
            android:id="@+id/aroma"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:text="@string/aroma" />

        <RadioButton
            android:id="@+id/dual"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:text="@string/dual" />
    </RadioGroup>
    
    <RadioGroup
        android:id="@+id/hopFormGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/whole"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/whole" />

        <RadioButton
            android:id="@+id/plug"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:text="@string/plug" />

        <RadioButton
            android:id="@+id/pellet"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:text="@string/pellet" />
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/storageName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/storage_factor"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/storage_factor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/storage_factor"
            android:inputType="numberDecimal" >
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/humulene_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humulene"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/humulene_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/humulene"
            android:inputType="numberDecimal" >
        </EditText>

        <TextView
            android:id="@+id/cohumulone_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cohumulone"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/cohumulone_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/cohumulone"
            android:inputType="numberDecimal" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/myrcene_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myrcene"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/myrcene_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/myrcene"
            android:inputType="numberDecimal" >
        </EditText>

        <TextView
            android:id="@+id/caryophyllene_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/caryophyllene"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/caryophyllene_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/caryophyllene"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <EditText
        android:id="@+id/hopsNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine" 
        >
    </EditText>

</LinearLayout>