<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/malt_details_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >

    <EditText
        android:id="@+id/waterName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/waterName" />
    <EditText
        android:id="@+id/bestBeer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bestBeer" />

    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/calciumName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calciumName"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        
        <EditText
            android:id="@+id/calciumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/calciumName"
            android:inputType="numberDecimal" >
        </EditText>

        <TextView
            android:id="@+id/magnesiumName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/magnesiumName"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/magnesiumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/magnesiumName"
            android:inputType="numberDecimal" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/sulfateName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sulfateName"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        
        <EditText
            android:id="@+id/sulfateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/sulfateName"
            android:inputType="numberDecimal" >
        </EditText>

        <TextView
            android:id="@+id/sodiumName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sodiumName"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/sodiumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/sodiumName"
            android:inputType="numberDecimal" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/bicarbonadeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bicarbonadeName"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        
        <EditText
            android:id="@+id/bicarbonadeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/bicarbonadeName"
            android:inputType="numberDecimal" >
        </EditText>

        <TextView
            android:id="@+id/chlorideName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chlorideName"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/chlorideText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/chlorideName"
            android:inputType="numberDecimal" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/phName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phName"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        
        <EditText
            android:id="@+id/phText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/phName"
            android:inputType="numberDecimal" >
        </EditText>

        
    </LinearLayout>
    
    

</LinearLayout>